terraform/efs-sample/aws_vpc.tf
resource "aws_vpc" "efs-sample" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags {
    Name        = "efs-sample"
    Description = "This resource was created through Terraform"
  }
}
